# aws-deepracer-model-optimizer-pkg

./: README.md
model_optimizer_pkg/: package.xml  setup.cfg  setup.py
model_optimizer_pkg/launch/: model_optimizer_pkg_launch.py
model_optimizer_pkg/model_optimizer_pkg/: constants.py  model_optimizer_node.py  test_node.py
